--- a/style.scss
+++ b/style.scss
@@ -226,3 +226,44 @@ aside{
 {
   background-color: lightgray;
 }
+footer div {
+  max-width: 1200px;
+  margin: 0 auto;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+}
+
+footer p {
+  margin-top: 10px;
+  color: #f1f1f1;
+}
+
+footer ul {
+  list-style: none;
+  padding: 0;
+}
+
+footer li {
+  display: inline-block;
+  margin-right: 10px;
+}
+
+footer a {
+  text-decoration: none;
+  color: #f1f1f1;
+}
+
+footer {
+  background-color: rgb(196, 0, 0);
+  padding: 20px;
+}
+
+footer div a img {
+  background-color: rgb(196, 0, 0);
+  height: 3rem;
+  width: 10rem;
+  margin-top: 10px;}
+::-webkit-scrollbar {
+    width: 0px;
+  }
