--- a/template.scss
+++ b/template.scss
@@ -140,108 +140,44 @@ aside {
 * {
   box-sizing: border-box;
 }
-
-/* Slideshow container */
-.slideshow-container {
-  max-width: 1500px;
-  position: relative;
-  margin: auto;
-  background-color: #717171;
-}
-
-/* Hide the images by default */
-.mySlides {
-  display: none;
-}
-
-/* Next & previous buttons */
-.prev, .next {
-  cursor: pointer;
-  position: absolute;
-  top: 50%;
-  width: auto;
-  margin-top: -22px;
-  padding: 16px;
-  color: white;
-  font-weight: bold;
-  font-size: 18px;
-  transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
-  -webkit-user-select: none;
-     -moz-user-select: none;
-          user-select: none;
-}
-
-.next {
-  right: 0;
-  border-radius: 3px 0 0 3px;
-}
-
-.prev:hover, .next:hover {
-  background-color: rgba(0, 0, 0, 0.8);
-}
-
-.active, .dot:hover {
-  background-color: #717171;
-}
-
-.fade {
-  animation-name: fade;
-  animation-duration: 1.5s;
-}
-
-@keyframes fade {
-  from {
-    opacity: 0.4;
-  }
-  to {
-    opacity: 1;
-  }
-}
-.backgrounddiv {
-  background-color: lightgray;
-}
-
 footer div {
-  max-width: 1200px;
-  margin: 0 auto;
-  text-align: center;
-  display: flex;
-  justify-content: center;
-}
-
-footer p {
-  margin-top: 10px;
-  color: #f1f1f1;
-}
-
-footer ul {
-  list-style: none;
-  padding: 0;
-}
-
-footer li {
-  display: inline-block;
-  margin-right: 10px;
-}
-
-footer a {
-  text-decoration: none;
-  color: #f1f1f1;
-}
-
-footer {
-  background-color: rgb(196, 0, 0);
-  padding: 20px;
-}
-
-footer div a img {
-  background-color: rgb(196, 0, 0);
-  height: 3rem;
-  width: 10rem;
-  margin-top: 10px;
-}
-
-::-webkit-scrollbar {
-  width: 0px;
-}/*# sourceMappingURL=style.css.map */
+    max-width: 1200px;
+    margin: 0 auto;
+    text-align: center;
+  }
+  
+  footer p {
+    margin-top: 10px;
+    color: #f1f1f1;
+    display: inline-block;
+  }
+  
+  footer ul {
+    list-style: none;
+    padding: 0;
+  }
+  
+  footer li {
+    display: inline-block;
+    margin-right: 10px;
+  }
+  
+  footer a {
+    text-decoration: none;
+    color: #f1f1f1;
+  }
+  footer
+  {
+    background-color: rgb(196, 0, 0);
+    padding: 20px;
+  }
+  footer div a img 
+  {
+    background-color: rgb(196, 0, 0);
+    height: 3rem;
+    width: 10rem;
+    margin-top: 10px;
+  }
+  ::-webkit-scrollbar {
+    width: 0px;
+  }
