--- a/style.scss
+++ b/style.scss
@@ -101,6 +101,10 @@
             display: none;
         }
     }
+    div{  
+      display: flex;
+    justify-content: center;
+    }
 }
 @media only screen and (min-width: 768px) 
 {
@@ -138,7 +142,10 @@
             display: none;
         }
     }
- 
+    div{  
+      display: flex;
+    justify-content: center;
+    }
         
    
 }
@@ -230,8 +237,6 @@ footer div {
   max-width: 1200px;
   margin: 0 auto;
   text-align: center;
-  display: flex;
-  justify-content: center;
 }
 
 footer p {
