--- a/template.scss
+++ b/template.scss
@@ -81,6 +81,10 @@
   nav button {
     display: none;
   }
+  div{  
+    display: flex;
+  justify-content: center;
+  }
 }
 @media only screen and (min-width: 768px) {
   header {
@@ -113,6 +117,10 @@
   }
   nav button {
     display: none;
+  }
+  div{  
+    display: flex;
+  justify-content: center;
   }
 }
 body {
