--- a/style.scss
+++ b/style.scss
@@ -101,7 +101,7 @@
             display: none;
         }
     }
-    div{  
+    footer div{  
       display: flex;
     justify-content: center;
     }
@@ -142,7 +142,7 @@
             display: none;
         }
     }
-    div{  
+    footer div{  
       display: flex;
     justify-content: center;
     }
