--- a/FIA.css
+++ b/FIA.css
@@ -81,7 +81,7 @@
   nav button {
     display: none;
   }
-  footer div {
+  div {
     display: flex;
     justify-content: center;
   }
@@ -118,7 +118,7 @@
   nav button {
     display: none;
   }
-  footer div {
+  div {
     display: flex;
     justify-content: center;
   }
@@ -131,6 +131,7 @@ body {
 body {
   font-family: "Titillium web";
 }
+
 body header img {
   padding: 10px;
 }
@@ -149,67 +150,6 @@ aside {
   box-sizing: border-box;
 }
 
-/* Slideshow container */
-.slideshow-container {
-  max-width: 1500px;
-  position: relative;
-  margin: auto;
-  background-color: #717171;
-}
-
-/* Hide the images by default */
-.mySlides {
-  display: none;
-}
-
-/* Next & previous buttons */
-.prev, .next {
-  cursor: pointer;
-  position: absolute;
-  top: 50%;
-  width: auto;
-  margin-top: -22px;
-  padding: 16px;
-  color: white;
-  font-weight: bold;
-  font-size: 18px;
-  transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
-  -webkit-user-select: none;
-     -moz-user-select: none;
-          user-select: none;
-}
-
-.next {
-  right: 0;
-  border-radius: 3px 0 0 3px;
-}
-
-.prev:hover, .next:hover {
-  background-color: rgba(0, 0, 0, 0.8);
-}
-
-.active, .dot:hover {
-  background-color: #717171;
-}
-
-.fade {
-  animation-name: fade;
-  animation-duration: 1.5s;
-}
-
-@keyframes fade {
-  from {
-    opacity: 0.4;
-  }
-  to {
-    opacity: 1;
-  }
-}
-.backgrounddiv {
-  background-color: lightgray;
-}
-
 footer div {
   max-width: 1200px;
   margin: 0 auto;
@@ -219,6 +159,7 @@ footer div {
 footer p {
   margin-top: 10px;
   color: #f1f1f1;
+  display: inline-block;
 }
 
 footer ul {
@@ -250,4 +191,4 @@ footer div a img {
 
 ::-webkit-scrollbar {
   width: 0px;
-}/*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=FIA.css.map */
