--- a/template.scss
+++ b/template.scss
@@ -81,9 +81,31 @@
   nav button {
     display: none;
   }
-  div{  
+  footer div{  
     display: flex;
   justify-content: center;
+  }
+  .ss
+  {
+    flex: 1;
+    margin-left: 20px;
+    padding-left: 20px;
+    border: 2px solid rgb(210, 29, 29);
+  }
+  .ff
+  {
+   display: flex; 
+   
+  }
+  aside
+  {
+    margin-left: 0px;
+    padding-top: 30px;
+    font-size: 25px;
+  }
+  section
+  {
+    padding-right: 100px;
   }
 }
 @media only screen and (min-width: 768px) {
@@ -118,9 +140,31 @@
   nav button {
     display: none;
   }
-  div{  
+  footer div{  
     display: flex;
   justify-content: center;
+  }
+  .ss
+  {
+    flex: 1;
+    margin-left: 20px;
+    padding-left: 20px;
+    border: 2px solid rgb(210, 29, 29);
+  }
+  .ff
+  {
+   display: flex; 
+   
+  }
+  aside
+  {
+    margin-left: 0px;
+    padding-top: 30px;
+    font-size: 25px;
+  }
+  section
+  {
+    padding-right: 100px;
   }
 }
 body {
@@ -139,11 +183,7 @@ nav {
   background-color: rgb(196, 0, 0);
 }
 
-aside {
-  background-color: black;
-  color: orange;
-  width: 22%;
-}
+
 
 * {
   box-sizing: border-box;
@@ -188,4 +228,8 @@ footer div {
   }
   ::-webkit-scrollbar {
     width: 0px;
+  }
+  .ss
+  {
+    border: 2px solid rgb(210, 29, 29);
   }
