--- a/circuits.css
+++ b/circuits.css
@@ -69,6 +69,8 @@
   }
   .table-wrapper {
     overflow-x: auto; 
+    display: flex;
+    justify-content: center;
     
   }
   table {
@@ -103,7 +105,7 @@
   nav a {
     display: block;
     padding: 0.5em;
-    color: black;
+    color: white;
     text-decoration: none;
     font-size: 20px;
   }
@@ -129,10 +131,7 @@
     content: attr(data-label);
     font-weight: bold;
   }
-  .table-wrapper {
-    overflow-x: auto; 
-    padding-left: 17.5%;
-  }
+
   footer div{  
     display: flex;
   justify-content: center;
@@ -140,7 +139,12 @@
   section, aside {
     display: block;
   }
-
+  .table-wrapper {
+    overflow-x: auto; 
+    display: flex;
+    justify-content: center;
+    
+  }
   
   
 }
