--- a/template.css
+++ b/template.css
@@ -49,7 +49,7 @@
     color: #f1f1f1;
   }
 }
-@media only screen and (min-width: 576px) {
+@media only screen and (min-width: 576px) and (max-width: 768px) {
   header {
     background-color: white;
   }
@@ -128,7 +128,7 @@
   nav a {
     display: block;
     padding: 0.5em;
-    color: black;
+    color: white;
     text-decoration: none;
     font-size: 20px;
   }
@@ -223,4 +223,8 @@ footer div a img {
 
 .ss {
   border: 2px solid rgb(210, 29, 29);
+}
+
+table {
+  margin: 0 auto;
 }/*# sourceMappingURL=template.css.map */
