--- a/template.scss
+++ b/template.scss
@@ -49,7 +49,7 @@
     color: #f1f1f1;
   }
 }
-@media only screen and (min-width: 576px) {
+@media only screen and (min-width: 576px) and (max-width: 768px) {
   header {
     background-color: white;
   }
@@ -133,7 +133,7 @@
   nav a {
     display: block;
     padding: 0.5em;
-    color: black;
+    color: white;
     text-decoration: none;
     font-size: 20px;
   }
@@ -232,4 +232,7 @@ footer div {
   .ss
   {
     border: 2px solid rgb(210, 29, 29);
+  }
+  table {
+    margin: 0 auto;
   }
