--- a/monoposty.css
+++ b/monoposty.css
@@ -328,7 +328,11 @@ footer div a img {
 }
 h1,h2{
   text-align: center;
-  font-family: "Titillium web";
+  font-family: "Titillium web";}
+.pp
+{
+  text-align: center;
+}
 table {
   margin: 0 auto;
 }/*# sourceMappingURL=monoposty.css.map */
