--- a/circuits.css
+++ b/circuits.css
@@ -173,7 +173,7 @@
   nav a {
     display: block;
     padding: 0.5em;
-    color: black;
+    color: white;
     text-decoration: none;
     font-size: 20px;
   }
