--- a/monoposty.css
+++ b/monoposty.css
@@ -48,58 +48,12 @@
     font-size: 25px;
     color: #f1f1f1;
   }
-  td,
-  th {
-    display: block;
+  tr td img
+  {
+    width: 250px;
+    height: 250px;
+    margin: 10px;
   }
-
-  td {
-    position: relative;
-  }
-
-  td::before {
-    position: absolute;
-    top: 6px;
-    left: 6px;
-    width: 45%;
-    padding-right: 10px;
-    white-space: nowrap;
-    content: attr(data-label);
-    font-weight: bold;
-  }
-  
-  .table-wrapper {
-    overflow-x: auto;
-    display: flex;
-    justify-content: center;
-    text-align: center;
-    background-image: url('photo.jpg');
-    background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  }
-  .table-wrapper2 {
-    overflow-x: auto;
-    display: flex;
-    justify-content: center;
-    text-align: center;
-    background-image: url('photo.jpg');
-    background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  }
-  
-  table {
-    width: 75%;
-    max-width: 75%;
-  }
-td img {  
-  width: 225px;
-    height: 225px;
-    border: 2px solid rgb(210, 29, 29);
-    padding: 20px;
-    background-color: #f1f1f1;
-}
 }
 @media only screen and (min-width: 576px) and (max-width: 768px) {
   header {
@@ -154,30 +108,12 @@ td img {
   section {
     padding-right: 100px;
   }
-  .table-wrapper {
-    display: block;
-    justify-content: center;
-    overflow-x: auto;
-    background-image: url('photo.jpeg');
-    background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
+  tr td img
+  {
+    width: 300px;
+    height: 300px;
+    margin: 10px;
   }
-  .table-wrapper2 {
-    display: block;
-    justify-content: center;
-    overflow-x: auto;
-    background-image: url('photo.jpeg');
-    background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  }
-  td img {
-    width: 250px;
-    height: 250px;
-    
-  }
-  
 }
 @media only screen and (min-width: 768px) {
   header {
@@ -220,7 +156,6 @@ td img {
     margin-left: 20px;
     padding-left: 20px;
     border: 2px solid rgb(210, 29, 29);
-    background-color: #f1f1f1;
   }
   .ff {
     display: flex;
@@ -233,31 +168,12 @@ td img {
   section {
     padding-right: 100px;
   }
-  img
+  tr td img
   {
     width: 300px;
     height: 300px;
-    padding-top:10px;
-    padding-right: 10px;
-    
+    margin: 10px;
   }
-  .table-wrapper {
-    display: flex;
-    justify-content: center;
-    background-image: url('photo.jpg');
-    background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  }
-  .table-wrapper2 {
-    display: flex;
-    justify-content: center;
-    background-image: url('photo.jpg');
-    background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  }
-  
 }
 body {
   background-color: white;
@@ -329,4 +245,9 @@ footer div a img {
 
 table {
   margin: 0 auto;
-}/*# sourceMappingURL=monoposty.css.map */
+}
+h1,p,h2
+{
+  text-align: center;
+}
+/*# sourceMappingURL=monoposty.css.map */
