--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@
   }
   /* Stylování odkazů uvnitř rozbalovacího menu */
   .dropdown-content a {
-    color: black;
+    color: rgb(255, 255, 255);
     padding: 12px 16px;
     text-decoration: none;
     display: block;
@@ -48,8 +48,13 @@
     font-size: 25px;
     color: #f1f1f1;
   }
+  .ff {
+    overflow-x: auto;
+    display: flex;
+    flex-wrap: wrap;
+  }
 }
-@media only screen and (min-width: 576px) {
+@media only screen and (min-width: 576px) and (max-width: 768px) {
   header {
     background-color: white;
   }
@@ -74,7 +79,7 @@
   nav a {
     display: block;
     padding: 0.5em;
-    color: black;
+    color: rgb(255, 255, 255);
     text-decoration: none;
     font-size: 20px;
   }
@@ -84,6 +89,11 @@
   footer div {
     display: flex;
     justify-content: center;
+  }
+  .ff {
+    overflow-x: auto;
+    display: flex;
+    flex-wrap: wrap;
   }
 }
 @media only screen and (min-width: 768px) {
@@ -111,7 +121,7 @@
   nav a {
     display: block;
     padding: 0.5em;
-    color: black;
+    color: white;
     text-decoration: none;
     font-size: 20px;
   }
@@ -121,6 +131,10 @@
   footer div {
     display: flex;
     justify-content: center;
+  }
+  .ff {
+    overflow-x: auto;
+    display: flex;
   }
 }
 body {
@@ -137,12 +151,6 @@ body header img {
 
 nav {
   background-color: rgb(196, 0, 0);
-}
-
-aside {
-  background-color: black;
-  color: orange;
-  width: 22%;
 }
 
 * {
@@ -250,4 +258,29 @@ footer div a img {
 
 ::-webkit-scrollbar {
   width: 0px;
+}
+
+.ss {
+  flex: 1;
+  margin-left: 20px;
+  padding-left: 20px;
+  border: 2px solid rgb(210, 29, 29);
+}
+
+.bb1 {
+  padding: 10px;
+  border: 10px solid rgb(210, 29, 29);
+  border-width: 10px 10px 10px 0;
+  border-radius: 10px;
+  overflow: hidden;
+  margin: 30px;
+}
+
+.bb2 {
+  padding: 10px;
+  border: 10px solid rgb(210, 29, 29);
+  border-width: 10px 0 10px 10px;
+  border-radius: 10px;
+  overflow: hidden;
+  margin: 30px;
 }/*# sourceMappingURL=style.css.map */
