--- a/style.scss
+++ b/style.scss
@@ -304,6 +304,9 @@ footer div a img {
   border-radius: 10px; 
   overflow: hidden;
   margin: 30px;
+  height: 50%;
+  width: 50%;
+
 }
 .bb2 {
   padding: 10px;
@@ -312,5 +315,6 @@ footer div a img {
   border-radius: 10px; 
   overflow: hidden;
   margin: 30px;
- 
+  height: 50%;
+  width: 50%;
 }
