--- a/monoposty.css
+++ b/monoposty.css
@@ -242,18 +242,10 @@ footer div a img {
 .ss {
   border: 2px solid rgb(210, 29, 29);
 }
-h1,h2{
-  text-align: center;
-  font-family: "Titillium web";}
-.pp
+h1,h2,p
 {
   text-align: center;
 }
 table {
   margin: 0 auto;
-}
-h1,p,h2
-{
-  text-align: center;
-}
-/*# sourceMappingURL=monoposty.css.map */
+}/*# sourceMappingURL=monoposty.css.map */
