--- a/FIA.css
+++ b/FIA.css
@@ -74,7 +74,7 @@
   nav a {
     display: block;
     padding: 0.5em;
-    color: black;
+    color: rgb(255, 255, 255);
     text-decoration: none;
     font-size: 20px;
   }
