--- a/FIA.css
+++ b/FIA.css
@@ -229,7 +229,10 @@ p
   text-align: center;
   border: 2px solid rgb(210, 29, 29);
 }
-
+h1,h2
+{
+  text-align: center;
+}
 table {
   margin: 0 auto;
 }/*# sourceMappingURL=FIA.css.map */
